# JudgmentAI

./: GETTING_STARTED.md  README.md  plan.md
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_workflow.py
backend/app/: main.py
backend/app/api/v1/: auth.py  chat.py  scrape.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: init_db.sql  schemas.py  supabase_client.py
backend/app/services/: analysis_service.py  chat_service.py
backend/app/tasks/: celery_app.py  reddit_scraper.py  reddit_scraper_public.py  web_search.py
backend/app/utils/: helpers.py
backend/scripts/: setup.sh
frontend/: README.md  SPEC.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/assets/images/: index.js
frontend/src/components/analysis/: ArgumentsSection.jsx  BiasDetection.jsx  ConsensusCard.jsx  DeepMetaAnalysis.jsx  DiscourseAnalysis.jsx  MetaSection.jsx  QuickSummary.jsx  RhetoricComparison.jsx  SentimentBar.jsx  SteelmanCard.jsx  TimelineChart.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useAnalysis.js  useAuth.js  useChat.js  useMetaAnalysis.js  usePolling.js  useQuickSummary.js
frontend/src/pages/: AnalysisPage.jsx  DashboardPage.jsx  LoginPage.jsx  NotFoundPage.jsx  SignupPage.jsx
frontend/src/services/: analysis.service.js  api.js  auth.service.js  chat.service.js
frontend/src/utils/: constants.js  demoData.js  formatters.js  helpers.js  validators.js
(+29 files in other folders)
